<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bridge_detail_belong_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="江苏省 南京市 G45 南京路 143+274"
        android:textSize="13sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_name"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_level_type"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_level_type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_position"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_position_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_type"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_length"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_length_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_width"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_width_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_height"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_height_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXXXXXXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_build_year"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_build_year_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXXXXXXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_tec_level"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_tec_level_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXXXXXXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_weight"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_weight_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXXXXX"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridge_detail_level"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bridge_detail_level_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXXXX"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>