<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/qurey_result_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/query_road_detail_roadname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#ff0000"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/seaech_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sumkm" />

            <TextView
                android:id="@+id/query_road_detail_roadkm"
                style="@style/seaech_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/seaech_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/query_road_detail_path" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/query_road_detail_path"
                    style="@style/seaech_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/seaech_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic" />

            <TextView
                android:id="@+id/query_road_detail_traffic"
                style="@style/seaech_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/seaech_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startstake" />

            <TextView
                android:id="@+id/query_road_detail_startstake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/seaech_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endstake" />

            <TextView
                android:id="@+id/query_road_detail_endstake"
                style="@style/seaech_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>