<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F2F8F4"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="22dp"
    android:paddingTop="15dp"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/evaluation_info"
            android:textColor="@color/dialog_button_text"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="@string/bci"
                android:textColor="#ff333333"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_fragment_bridge_judge_bci"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bridge_detail_info_strok_bg"
                android:includeFontPadding="false"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="3dp"
                android:textColor="#333333"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" >

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="@string/bci_level"
                android:textColor="#ff333333"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_fragment_bridge_judge_bci_level"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bridge_detail_info_strok_bg"
                android:includeFontPadding="false"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="3dp"
                android:textColor="#333333"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/evaluation_date"
                    android:textColor="#ff333333"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tv_fragment_bridge_judge_evaluation_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bridge_detail_info_strok_bg"
                    android:includeFontPadding="false"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:textColor="#333333"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/evaluation_method"
                    android:textColor="#ff333333"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tv_fragment_bridge_judge_evaluation_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bridge_detail_info_strok_bg"
                    android:includeFontPadding="false"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:textColor="#333333"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/last_testing"
                    android:textColor="#ff333333"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tv_fragment_bridge_judge_last_testing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bridge_detail_info_strok_bg"
                    android:includeFontPadding="false"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:textColor="#333333"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/next_testing"
                    android:textColor="#ff333333"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tv_fragment_bridge_judge_next_testing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bridge_detail_info_strok_bg"
                    android:includeFontPadding="false"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:textColor="#333333"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:text="@string/evaluation_explain"
                android:textColor="#ff333333"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_fragment_bridge_judge_evaluation_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bridge_detail_info_strok_bg"
                android:includeFontPadding="false"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="3dp"
                android:textColor="#333333"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>